doing responsive teams setion and make structure for some fact section

--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@
 .text-dark03{
     color: #727272;
 }
+.text-primary{
+    color:  rgb(255, 144, 14);
+}
 .btn-primary{
     border-radius: 8px;
     background: rgb(255, 144, 14);
@@ -31,6 +34,19 @@
     font-weight: 600;
     font-size: 1.25em;
     border: none;
+}
+main{
+    max-width: 1440px;
+    margin: 0 auto;
+}
+main > section{
+    margin-top: 130px;
+}
+
+.section-title{
+    font-size: 2.8rem;
+    font-weight: 700;
+    margin-bottom: 24px;
 }
   /* Header */
 
@@ -82,10 +98,49 @@
 .banner-image{
     width: 100%;
 }
+/* Team and features */
+
+.teams{
+    align-items: center;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 24px;
+    margin-bottom: 50px;
+}
+.our-features{
+    margin-left: 130px;
+    max-width: 530px;
+}
+
+.feature-description{
+    margin-bottom: 24px;
+}
+#quick-list{
+    font-weight: 500;
+}
+
 /* Responsive Media Query */
 
 @media screen and (max-width:576px) {
-    .navbar,.nav-links{
+    .navbar,.nav-links,.teams{
         flex-direction: column;
+    }
+    .team-img-container{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .our-features{
+        margin-left: 20px;
+    }
+}
+/* Medium size devices */
+
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin-left: 50px auto;
     }
 }
