--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ main > section{
 .nav-link{
     text-decoration: none;
 }
-.navbar,.banner{
+.navbar,.banner,.teams,.some-fact{
     max-width: 1440px;
     margin: 0 auto;
 }
@@ -120,6 +120,36 @@ main > section{
 #quick-list{
     font-weight: 500;
 }
+/* Same Fact Card */
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    
+}
+.fact-description{
+    max-width: 540px;
+    margin-bottom: 10px;
+}
+.fact-card{
+    border: 1px solid rgb(255, 144, 14);
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 5px;
+}
 
 /* Responsive Media Query */
 
@@ -127,8 +157,12 @@ main > section{
     .navbar,.nav-links,.teams{
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container,.facts-container{
         grid-template-columns: repeat(1,1fr);
+    }
+    .facts-container{
+        justify-items: center;
+        gap: 24px;
     }
     .our-features{
         margin-left: 20px;
