--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-*{
+/* *{
     margin: 0;
-}
+} */
 .work-sans-font{
     font-family: "Work Sans", sans-serif;
     font-optical-sizing: auto;
@@ -120,6 +120,42 @@ main > section{
 #quick-list{
     font-weight: 500;
 }
+/* Features Section style */
+.features{
+    gap: 140px;
+}
+#feature-section-title{
+    padding-left: 21px;
+    border-left: 5px solid #FF900E; 
+}
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-top: 20px;
+    border-radius: 10px;
+}
+.feature-card,.feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+#experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+}
+#experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+}
+.feature-image img{
+    width: 100%;
+
+}
+
 /* Same Fact Card */
 .facts-container{
     display: grid;
@@ -151,30 +187,60 @@ main > section{
     margin-top: 5px;
 }
 
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
 /* Responsive Media Query */
 
 @media screen and (max-width:576px) {
-    .navbar,.nav-links,.teams{
+    .navbar,.nav-links,.teams,.features{
         flex-direction: column;
     }
-    .team-img-container,.facts-container{
+    .team-img-container,.sponsor-companies,.facts-container,.features{
         grid-template-columns: repeat(1,1fr);
     }
-    .facts-container{
+    .facts-container,.sponsor-companies{
         justify-items: center;
         gap: 24px;
+    }
+    .sponsor-companies{
+        justify-items: center;
+        gap: 50px;
     }
     .our-features{
         margin-left: 20px;
     }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
+    }
+    
 }
 /* Medium size devices */
 
 @media screen and (min-width:576px) and (max-width:992px) {
-    .teams{
+    .teams,.features{
         flex-direction: column;
     }
     .our-features{
         margin-left: 50px auto;
+    }
+    .sponsor-companies,.facts-container{
+        grid-template-columns: repeat(2,1fr);
+        gap: 50px;
+        justify-items: center;
+    }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
     }
 }
